[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/App.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://copy.png" type="Texture" id=3]

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MainPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
margin_left = 30.0
margin_top = 39.0
margin_right = 500.0
margin_bottom = 439.0
custom_constants/separation = 21

[node name="HSplitContainer" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_right = 470.0
margin_bottom = 50.0
dragger_visibility = 1

[node name="PickFiles" type="Button" parent="MainPanel/VBoxContainer/HSplitContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Pick Files"

[node name="SelectedFiles" type="Label" parent="MainPanel/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
margin_left = 212.0
margin_top = 13.0
margin_right = 470.0
margin_bottom = 37.0
autowrap = true
max_lines_visible = 2

[node name="Offset" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_top = 71.0
margin_right = 470.0
margin_bottom = 105.0
dragger_visibility = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/Offset"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 29.0
text = "Offset"
align = 1
valign = 1

[node name="SpinBox" type="SpinBox" parent="MainPanel/VBoxContainer/Offset"]
margin_left = 63.0
margin_right = 470.0
margin_bottom = 34.0
max_value = 25.0
rounded = true

[node name="Class" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_top = 126.0
margin_right = 470.0
margin_bottom = 160.0
dragger_visibility = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/Class"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 29.0
text = "Class Name"
align = 1
valign = 1

[node name="ClassName" type="LineEdit" parent="MainPanel/VBoxContainer/Class"]
margin_left = 109.0
margin_right = 470.0
margin_bottom = 34.0
clear_button_enabled = true

[node name="Save" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_top = 181.0
margin_right = 470.0
margin_bottom = 231.0
dragger_visibility = 1
__meta__ = {
"_edit_group_": true
}

[node name="Save Location" type="Button" parent="MainPanel/VBoxContainer/Save"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Save Location"

[node name="SaveLocationLabel" type="Label" parent="MainPanel/VBoxContainer/Save"]
unique_name_in_owner = true
margin_left = 212.0
margin_top = 13.0
margin_right = 470.0
margin_bottom = 37.0
autowrap = true
max_lines_visible = 2

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
margin_top = 252.0
margin_right = 470.0
margin_bottom = 256.0

[node name="Generate" type="Button" parent="MainPanel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 277.0
margin_right = 470.0
margin_bottom = 327.0
rect_min_size = Vector2( 200, 50 )
text = "Generate"

[node name="HSplitContainer2" type="HSplitContainer" parent="MainPanel/VBoxContainer"]
margin_top = 348.0
margin_right = 470.0
margin_bottom = 378.0
split_offset = 420

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/HSplitContainer2"]
margin_top = 3.0
margin_right = 420.0
margin_bottom = 27.0

[node name="CopyToClipboard" type="Button" parent="MainPanel/VBoxContainer/HSplitContainer2"]
margin_left = 432.0
margin_right = 470.0
margin_bottom = 30.0
icon = ExtResource( 3 )
expand_icon = true

[node name="CodeBlock" type="TextEdit" parent="MainPanel"]
unique_name_in_owner = true
margin_left = 550.0
margin_top = 40.0
margin_right = 1010.0
margin_bottom = 440.0
readonly = true

[node name="Exit" type="Button" parent="MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 203.0
margin_right = 100.0
margin_bottom = 253.0
rect_min_size = Vector2( 200, 50 )
text = "Exit"

[node name="OpenFileDialog" type="FileDialog" parent="MainPanel"]
unique_name_in_owner = true
margin_right = 795.0
margin_bottom = 425.0
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.png,*jpg,*jpeg ; Images" )

[node name="SaveFileDialog" type="FileDialog" parent="MainPanel"]
unique_name_in_owner = true
margin_right = 478.0
margin_bottom = 299.0
resizable = true
access = 2
filters = PoolStringArray( "*.png; Images" )

[connection signal="pressed" from="MainPanel/VBoxContainer/HSplitContainer/PickFiles" to="." method="_on_PickFiles_pressed"]
[connection signal="value_changed" from="MainPanel/VBoxContainer/Offset/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="text_changed" from="MainPanel/VBoxContainer/Class/ClassName" to="." method="_on_ClassName_text_changed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/Save/Save Location" to="." method="_on_Save_Location_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/Generate" to="." method="_on_Generate_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/HSplitContainer2/CopyToClipboard" to="." method="_on_CopyToClipboard_pressed"]
[connection signal="pressed" from="MainPanel/Exit" to="." method="_on_Exit_pressed"]
[connection signal="files_selected" from="MainPanel/OpenFileDialog" to="." method="_on_OpenFileDialog_files_selected"]
[connection signal="file_selected" from="MainPanel/SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
